[package]
name = "itre-im"
version = "0.1.0"
authors = ["Yukio Usuzumi <anohigisavay@gmail.com>"]

[[bin]]
name = "itre-im-server"
path = "server/main.rs"

[[bin]]
name = "itre-im-client"
path = "client/main.rs"

[dependencies]
bytes = "*"
byteorder = "*"
tokio-io = "*"
tokio-proto = "*"
itre = { git = "https://github.com/y-usuzumi/itre" }